# workshop-sst

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT_COLLAB.md  CONTRIBUTING.md  Dockerfile  Dockerfile.serve  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  DISCUSSIONS_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  deploy.yml  docs.yml
api/: index.html
api/cli/: index.html
api/io/: index.html
api/ml/: index.html
api/plot/: index.html
api/transform/: index.html
css/: custom.css
data/: .gitignore  nino34_sample.csv.dvc  nino34_sample.csv.pointer.yaml  sst_sample.csv  sst_sample.csv.dvc  sst_sample.csv.pointer.yaml
docs/: index.md  mlflow.md  model_serving.md  model_tracking.md
docs/api/: cli.md  index.md  io.md  ml.md  plot.md  transform.md
model_serving/: index.html
model_tracking/: index.html
runs/sst_enso/: model.joblib.dvc  model.joblib.pointer.yaml
scripts/: fetch_from_pointer.py  get_md5.py  load_model.py  run_local.sh  serve_model.py  train_sst_mlflow.py  train_sst_wandb.py
search/: search_index.json
slides/: conclusions.md
src/sst/: __init__.py  cli.py  io.py  ml.py  plot.py  pointer.py  transform.py
tests/: test_cli.py  test_ml.py  test_transform.py
workshop_sst_demo/: index.html  workshop_sst_demo.ipynb
