[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sst"
version = "0.1.0"
description = "A tiny sea surface temperature ETL sample repo for workshops (SST + ENSO)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Workshop Maintainers"}]
dependencies = [
  "pandas>=2.1",
  "numpy>=1.26",
  "matplotlib>=3.8",
  "typer>=0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "mypy>=1.5",
  "ruff>=0.4.10",
  "black>=24.3.0",
  "pre-commit>=3.7.0",
  "pyproject-fmt>=1.8.0",
]

[project.scripts]
sst = "sst.cli:app"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true
