[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools>=68", "wheel" ]

[project]
name = "sst"
version = "0.1.0"
description = "A tiny sea surface temperature ETL sample repo for workshops (SST + ENSO)."
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Nikki Tebaldi" } ]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.1",
  "typer>=0.9",
]

optional-dependencies.dev = [
  "black>=24.3",
  "mypy>=1.5",
  "pre-commit>=3.7",
  "pyproject-fmt>=1.8",
  "pytest>=7.4",
  "ruff>=0.4.10",
]
scripts.sst = "sst.cli:app"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = [ "E", "F", "I", "UP" ]
ignore = [ "E501" ]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true
