[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools>=68", "wheel" ]

[project]
name = "sst"
version = "0.6.2rc1"
description = "A sea surface temperature ML prediction package for workshops (SST + ENSO)."
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Nikki Tebaldi" } ]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "joblib>=1.3",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.1",
  "scikit-learn>=1.3",
  "seaborn>=0.13.2",
  "typer>=0.9",
]

optional-dependencies.dev = [
  "black>=24.3",
  "jupyterlab>=4",
  "mkdocs-jupyter>=0.24",
  "mypy>=1.5",
  "pandas-stubs>=2.1",
  "pre-commit>=3.7",
  "pyproject-fmt>=1.8",
  "pytest>=7.4",
  "ruff>=0.4.10",
  "types-seaborn>=0.13",
]
optional-dependencies.docs = [
  "mkdocs>=1.6",
  "mkdocs-jupyter>=0.24",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
  "pymdown-extensions>=10",
]

scripts.sst = "sst.cli:app"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

lint.select = [ "E", "F", "I", "UP" ]
lint.ignore = [ "E501" ]

[tool.pytest.ini_options]
testpaths = [ "tests" ]
python_files = [ "test_*.py" ]
python_classes = [ "Test*" ]
python_functions = [ "test_*" ]
addopts = [
  "-v",
  "--strict-markers",
]
doctest_optionflags = [
  "NORMALIZE_WHITESPACE",
  "ELLIPSIS",
  "IGNORE_EXCEPTION_DETAIL",
]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
  "joblib.*",
  "sklearn.*",
]
ignore_missing_imports = true
